fix(data-grid): fix issue with table header overlapping the column values
- the issue appears when the last on scroll event effect to update the
scroll position did not render until the next redraw, sometimes keeping
the header stuck over table values when using freeze-headers option and
scrolling back to top

--- a/packages/components/src/components/data-grid/data-grid.css
+++ b/packages/components/src/components/data-grid/data-grid.css
@@ -120,7 +120,7 @@
 .data-grid__table {
   border-spacing: 0;
   border-collapse: collapse;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .data-grid--hide-menu .data-grid__settings-menu {
@@ -146,6 +146,8 @@
 }
 
 .data-grid--freeze-header .thead {
+  position: sticky;
+  top: 0;
   z-index: 30;
   background-color: var(--telekom-color-background-canvas);
 }
